IoT GUIs deployment/gui-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gui-iot
  namespace: iot-gui
spec:
  selector:
    app: gui-iot
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30070
  type: NodePort
